# Trabalho-1-Geometria-Computacional

./: CMakeLists.txt  README.md
doc/: Doxyfile
include/: DoxGroups.h  IO.h  Partition.h  Primitives.h  Random.h  Types.h  Wurfel.h
include/Draw/: DrawPoints2.h  DrawSegments2.h  DrawSegments3.h  DrawVectors3.h
src/: IO.cpp  Partition.cpp  Primitives.cpp  Random.cpp  Wurfel.cpp
src/Draw/: DrawPoints2.cpp  DrawSegments2.cpp  DrawSegments3.cpp  DrawVectors3.cpp
trab1/: polygon_2_triangulate.cpp  polygon_2_triangulate_good.cpp
